fix: :bug: Correct positioning of image in CSS for precise alignment

--- a/storage/style/style.css
+++ b/storage/style/style.css
@@ -153,8 +153,8 @@ body{
 
 
 .imgright{
-    left: 725px ;
-    top: 205px;
+    left: 724px ;
+    top: 204px;
     position: absolute;
     width: 656px;
     height: 760px;
